--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "framer-motion": "^11.2.4",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
